[project]
name = "torch-scout"
version = "0.1.0"
description = "Automated Scaling Law Library for PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Faris Chaudhry", email = "faris.chaudhry@outlook.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/torch-scout/torch-scout"
"Repository" = "https://github.com/torch-scout/torch-scout"
"Issues" = "https://github.com/torch-scout/torch-scout/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ty]
